--- a/simple_social_clone/templates/base.html
+++ b/simple_social_clone/templates/base.html
@@ -46,4 +46,7 @@
         {% endblock %}
     </div>
 </body>
+
+<script type="text/javascript" src="{% static 'simplesocial/js/master.js' %}"></script>
+
 </html>
